LLM4Config/assets/helm-openldap_openldap-stack-ha.yaml
---
# Source: openldap-stack-ha/charts/ltb-passwd/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-openldap-stack-ha-ltb-passwd
  labels:
    app.kubernetes.io/name: my-openldap-stack-ha-ltb
    helm.sh/chart: ltb-passwd-0.1.0
    app.kubernetes.io/instance: my-openldap-stack-ha
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: my-openldap-stack-ha-ltb
    app.kubernetes.io/instance: my-openldap-stack-ha
---
# Source: openldap-stack-ha/charts/phpldapadmin/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-openldap-stack-ha-phpldapadmin
  labels:
    app: phpldapadmin
    chart: phpldapadmin-0.1.2
    release: my-openldap-stack-ha
    heritage: Helm
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: phpldapadmin
    release: my-openldap-stack-ha
---
# Source: openldap-stack-ha/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-openldap-stack-ha
  namespace: default
  labels:
    app.kubernetes.io/component: my-openldap-stack-ha
    chart: my-openldap-stack-ha-4.2.5
    release: my-openldap-stack-ha
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - name: ldap-port
      protocol: TCP
      port: 389
      targetPort: ldap-port
      nodePort: null
    - name: ssl-ldap-port
      protocol: TCP
      port: 636
      targetPort: ssl-ldap-port
      nodePort: null
  sessionAffinity: None
  selector:
    app.kubernetes.io/component: my-openldap-stack-ha
    release: my-openldap-stack-ha
---
# Source: openldap-stack-ha/templates/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-openldap-stack-ha-headless
  labels:
    app.kubernetes.io/component: my-openldap-stack-ha
    chart: my-openldap-stack-ha-4.2.5
    release: my-openldap-stack-ha
    heritage: Helm
spec:
  ports:
  - port: 389
    name: ldap-port
    targetPort: ldap-port
  - port: 636
    name: ssl-ldap-port
    targetPort: ssl-ldap-port
  clusterIP: None
  selector:
    app.kubernetes.io/component: my-openldap-stack-ha
    release: my-openldap-stack-ha  
  type: ClusterIP
  sessionAffinity: None
---
# Source: openldap-stack-ha/charts/ltb-passwd/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-openldap-stack-ha-ltb-passwd
  labels:
    app.kubernetes.io/name: my-openldap-stack-ha-ltb
    helm.sh/chart: ltb-passwd-0.1.0
    app.kubernetes.io/instance: my-openldap-stack-ha
    app.kubernetes.io/version: "1.3"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: my-openldap-stack-ha-ltb
      app.kubernetes.io/instance: my-openldap-stack-ha
  template:
    metadata:
      labels:
        app.kubernetes.io/name: my-openldap-stack-ha-ltb
        app.kubernetes.io/instance: my-openldap-stack-ha
    spec:
      
      containers:
        - name: ltb-passwd
          image: tiredofit/self-service-password:5.2.3
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
          volumeMounts:
            - mountPath: /etc/openldap
              name: ldap-conf
      volumes:
      - name: ldap-conf
        configMap:
          name: my-openldap-stack-ha-ltb-passwd-ldap-cm
---
# Source: openldap-stack-ha/charts/phpldapadmin/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: my-openldap-stack-ha-phpldapadmin
  labels:
    app: phpldapadmin
    chart: phpldapadmin-0.1.2
    release: my-openldap-stack-ha
    heritage: Helm

spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpldapadmin
      release: my-openldap-stack-ha
  template:
    metadata:
      labels:
        app: phpldapadmin
        release: my-openldap-stack-ha
    spec:
      
      containers:
      - name: phpldapadmin
        image: osixia/phpldapadmin:0.9.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        livenessProbe:
            httpGet:
              path: /
              port: http
        readinessProbe:
            httpGet:
              path: /
              port: http
        resources:
            {}
---
# Source: openldap-stack-ha/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name:  my-openldap-stack-ha
  labels:
    app.kubernetes.io/name: openldap-stack-ha
    helm.sh/chart: openldap-stack-ha-4.2.5
    app.kubernetes.io/instance: my-openldap-stack-ha
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "2.6.7"
    app.kubernetes.io/component: my-openldap-stack-ha
    chart: my-openldap-stack-ha-4.2.5
    release: my-openldap-stack-ha
    heritage: Helm
spec:
  replicas: 3
  selector:
    matchLabels: 
      app.kubernetes.io/name: openldap-stack-ha
      app.kubernetes.io/instance: my-openldap-stack-ha
      app.kubernetes.io/component: my-openldap-stack-ha
  serviceName: my-openldap-stack-ha-headless
  updateStrategy:

    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/configmap-env: c6ee50700725dee83fd332c86f140a52231a425a31ef15c552c70b5cff4e2481
      labels:
        app.kubernetes.io/name: openldap-stack-ha
        helm.sh/chart: openldap-stack-ha-4.2.5
        app.kubernetes.io/instance: my-openldap-stack-ha
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/version: "2.6.7"
        app.kubernetes.io/component: my-openldap-stack-ha
        release: my-openldap-stack-ha
    spec:
      serviceAccountName: my-openldap-stack-ha-foo
      
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: my-openldap-stack-ha
                    app.kubernetes.io/name: openldap-stack-ha
                    app.kubernetes.io/component: openldap
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
      containers:
        - name: openldap-stack-ha
          image: jpgouin/openldap:2.6.7-fix
          imagePullPolicy: Always
          resources:
            limits: {}
            requests: {}
          ports:
            - name: ldap-port
              containerPort: 1389
            - name: ssl-ldap-port
              containerPort: 1636
          livenessProbe:
            tcpSocket:
              port: ldap-port
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 10
          readinessProbe:
            tcpSocket:
              port: ldap-port
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 10
          startupProbe:
            tcpSocket:
              port: ldap-port
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 30
          volumeMounts:
            - name: data
              mountPath: /bitnami/openldap/
            - name: certs
              mountPath: /opt/bitnami/openldap/certs
            - name: replication-acls
              mountPath: /opt/bitnami/openldap/etc/schema/syncprov.ldif
              subPath: syncprov.ldif
            - name: replication-acls
              mountPath: /opt/bitnami/openldap/etc/schema/serverid.ldif
              subPath: serverid.ldif
            - name: replication-acls
              mountPath: /opt/bitnami/openldap/etc/schema/csyncprov.ldif
              subPath: csyncprov.ldif
            - name: replication-acls
              mountPath: /opt/bitnami/openldap/etc/schema/rep.ldif
              subPath: rep.ldif
            - name: replication-acls
              mountPath: /opt/bitnami/openldap/etc/schema/bsyncprov.ldif
              subPath: bsyncprov.ldif
            - name: replication-acls
              mountPath: /opt/bitnami/openldap/etc/schema/brep.ldif
              subPath: brep.ldif
            - name: replication-acls
              mountPath: /opt/bitnami/openldap/etc/schema/acls.ldif
              subPath: acls.ldif
      volumes:
        - name: cm-replication-acls
          configMap:
            name: my-openldap-stack-ha-replication-acls
        - name: replication-acls
          emptyDir:
            medium: Memory
        - name: certs
          emptyDir:
            medium: Memory
        - name: secret-certs
          emptyDir:
            medium: Memory
  volumeClaimTemplates:
    - metadata:
        name: data
        annotations:
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
---
# Source: openldap-stack-ha/charts/ltb-passwd/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-openldap-stack-ha-ltb-passwd
  labels:
    app: my-openldap-stack-ha-ltb
    chart: ltb-passwd-0.1.0
    release: my-openldap-stack-ha
    heritage: Helm
spec:
  rules:
    - host: ssl-ldap2.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-openldap-stack-ha-ltb-passwd
                port:
                  name: http
---
# Source: openldap-stack-ha/charts/phpldapadmin/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-openldap-stack-ha-phpldapadmin
  labels:
    app: phpldapadmin
    chart: phpldapadmin-0.1.2
    release: my-openldap-stack-ha
    heritage: Helm
spec:
  rules:
    - host: phpldapadmin.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-openldap-stack-ha-phpldapadmin
                port:
                  name: http
---
# Source: openldap-stack-ha/templates/configmap-customldif.yaml
#
# A ConfigMap spec for openldap slapd that map directly to files under
# /container/service/slapd/assets/config/bootstrap/ldif/custom
#
---
# Source: openldap-stack-ha/templates/configmap-customschema.yaml
#
# A ConfigMap spec for openldap slapd that map directly to files under
# /opt/bitnami/openldap/etc/schema/custom
#
